# snowflake-id-worker

./: Cargo.toml  Dockerfile  HOSTING.md  LICENSE  README.md
.github/workflows/: build.yml  docker-publish-dev.yml  docker-publish-prod.yml  docker-publish.yml  lint.yml  tests.yml
benches/: bench.rs
src/: lib.rs  main.rs
