[package]
name = "snowflake-id-worker"
authors = ["ayu <ayu@ayu.dev>"]
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/ayubun/snowflake-id-worker"
homepage = "https://github.com/ayubun/snowflake-id-worker"
documentation = "https://github.com/ayubun/snowflake-id-worker"
description = "A Rust worker that serves an HTTP API to generate snowflake IDs using the Twitter snowflake algorithm"

[dependencies]
rs-snowflake = "0.6.0"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
warp = "0.3.7"
