[package]
name = "snowflake-id-worker"
authors = ["ayu <ayu@ayu.dev>"]
version = "0.2.0"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/ayubun/snowflake-id-worker"
homepage = "https://github.com/ayubun/snowflake-id-worker"
documentation = "https://github.com/ayubun/snowflake-id-worker"
description = "A Rust worker that serves an HTTP API to generate snowflake IDs using the Twitter snowflake algorithm"

[lib]
name = "snowflake_id_worker"
path = "src/lib.rs"

[[bin]]
name = "snowflake-id-worker"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.41", features = ["derive", "env"] }
hostname = "0.4.1"
rs-snowflake = "0.6.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
warp = "0.3.7"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
tokio-test = "0.4"

[[bench]]
name = "bench"
harness = false
